[gd_scene load_steps=6 format=2]

[ext_resource path="res://cycle/shrapnel/shrapnel.gd" type="Script" id=1]
[ext_resource path="res://cycle/shrapnel/shrapnel.png" type="Texture" id=2]
[ext_resource path="res://cycle/shrapnel/tinkle.wav" type="AudioStream" id=3]

[sub_resource type="PhysicsMaterial" id=2]
friction = 0.5
bounce = 0.25

[sub_resource type="CapsuleShape2D" id=1]
radius = 1.0
height = 2.0

[node name="shrapnel" type="RigidBody2D"]
collision_layer = 4
collision_mask = 5
mass = 0.1
physics_material_override = SubResource( 2 )
gravity_scale = 0.5
continuous_cd = 1
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 18
vframes = 10

[node name="collision_shape_2d" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="tween" type="Tween" parent="."]

[node name="ray_cast_2d" type="RayCast2D" parent="."]
enabled = true

[node name="lifetime" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -24.0
max_distance = 1000.0
attenuation = 2.0
bus = "Effects"

[connection signal="body_entered" from="." to="." method="_on_shrapnel_body_entered"]
[connection signal="timeout" from="lifetime" to="." method="_on_lifetime_timeout"]
